# tlkcore-examples-master

./: Codebook.txt  Install.md  README.md
examples/CSharp/: README.md
examples/CSharp/TLKCoreExample/: ExampleMain.cs  TLKCoreExample.csproj  TLKCoreExample.sln
examples/CSharp/TLKCoreExample/Properties/: AssemblyInfo.cs
examples/C_Cpp/: README.md
examples/C_Cpp/examples/: README.md  logging.conf
examples/C_Cpp/examples/files/: AAKIT_TMYTEK-4x4_ONE_28_IDEAL.csv  AAKIT_TMYTEK_28ONE_4x4_C2104L020-28.csv
examples/C_Cpp/examples/tlkcore_fbs/: CMakeLists.txt  README.md
examples/C_Cpp/examples/tlkcore_fbs/config/: CustomBatchBeams_D2252E058-28.csv  device.conf
examples/C_Cpp/examples/tlkcore_fbs/src/: tlkcore_fbs.cpp
examples/C_Cpp/examples/tlkcore_ris/: CMakeLists.txt  README.md
examples/C_Cpp/examples/tlkcore_ris/config/: device.conf  tile_up_device_with_rotate.conf
examples/C_Cpp/examples/tlkcore_ris/src/: tlkcore_ris.cpp
examples/C_Cpp/lib_tlkcore_cpp/: README.md
examples/C_Cpp/lib_tlkcore_cpp/include/: tlkcore_lib.hpp
examples/C_Cpp/lib_tlkcore_cpp/src/: tlkcore_lib.cpp
examples/LabVIEW/: README.md
examples/LabVIEW/2025Q1_64bit/: BBox.vi  TLKCore.lvlps  TLKCore.lvproj
examples/MATLAB/: README.md  TLKCoreExample.m
examples/Python/: BBox_comm_single_freq.m  README.md  Sweep_of_usrp_single_freq.asv  Sweep_of_usrp_single_freq.m  Upgrade_guide.md  bbox_element_config.csv  main.py  probe_chgainphase_duo.py  probe_duo.py  tlkcore_bridge.py  usrp_single_freq.asv  usrp_single_freq.m
